--- a/mod4-soln/index.html
+++ b/mod4-soln/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Module 4 Solution Starter</title>
+  <link rel="shortcut icon" href="#">
   <script>
     var names = []; // DO NOT REMOVE
   </script>
