some more text added in index.html

--- a/mod3-soln/index.html
+++ b/mod3-soln/index.html
@@ -47,6 +47,30 @@
                         Hot Idlis available at Rs 1. With Idlis, you will get three types of chutney viz. 
                         Orange Tomato Chutney, White Coconut Chutney and Green Coriander Chutney. 
                         Idlis will be so soft like cotton. Enjoy thoroughly!
+                        Hot Idlis available at Rs 1. With Idlis, you will get three types of chutney viz. 
+                        Orange Tomato Chutney, White Coconut Chutney and Green Coriander Chutney. 
+                        Idlis will be so soft like cotton. Enjoy thoroughly!
+                        Hot Idlis available at Rs 1. With Idlis, you will get three types of chutney viz. 
+                        Orange Tomato Chutney, White Coconut Chutney and Green Coriander Chutney. 
+                        Idlis will be so soft like cotton. Enjoy thoroughly!
+                        Hot Idlis available at Rs 1. With Idlis, you will get three types of chutney viz. 
+                        Orange Tomato Chutney, White Coconut Chutney and Green Coriander Chutney. 
+                        Idlis will be so soft like cotton. Enjoy thoroughly!
+                        Hot Idlis available at Rs 1. With Idlis, you will get three types of chutney viz. 
+                        Orange Tomato Chutney, White Coconut Chutney and Green Coriander Chutney. 
+                        Idlis will be so soft like cotton. Enjoy thoroughly!
+                        Hot Idlis available at Rs 1. With Idlis, you will get three types of chutney viz. 
+                        Orange Tomato Chutney, White Coconut Chutney and Green Coriander Chutney. 
+                        Idlis will be so soft like cotton. Enjoy thoroughly!
+                        Hot Idlis available at Rs 1. With Idlis, you will get three types of chutney viz. 
+                        Orange Tomato Chutney, White Coconut Chutney and Green Coriander Chutney. 
+                        Idlis will be so soft like cotton. Enjoy thoroughly!
+                        Hot Idlis available at Rs 1. With Idlis, you will get three types of chutney viz. 
+                        Orange Tomato Chutney, White Coconut Chutney and Green Coriander Chutney. 
+                        Idlis will be so soft like cotton. Enjoy thoroughly!
+                        Hot Idlis available at Rs 1. With Idlis, you will get three types of chutney viz. 
+                        Orange Tomato Chutney, White Coconut Chutney and Green Coriander Chutney. 
+                        Idlis will be so soft like cotton. Enjoy thoroughly!
                       </p>
                     <div class="h4 text-center">Dosa</div>
                       <p>
@@ -62,9 +86,109 @@
                         south India when you eat this. 
                         You will get tasty Vengaya Sambhar with Dosai 
                         and also coconut chutney. Get transported!!
+                        Soodana Dosai for only Rs 2. Very crispy moru 
+                        moru Dosai. Hand-made maavu in traditional 
+                        Aatukul. You will be transported to traditional 
+                        south India when you eat this. 
+                        You will get tasty Vengaya Sambhar with Dosai 
+                        and also coconut chutney. Get transported!!
+                        Soodana Dosai for only Rs 2. Very crispy moru 
+                        moru Dosai. Hand-made maavu in traditional 
+                        Aatukul. You will be transported to traditional 
+                        south India when you eat this. 
+                        You will get tasty Vengaya Sambhar with Dosai 
+                        and also coconut chutney. Get transported!!
+                        Soodana Dosai for only Rs 2. Very crispy moru 
+                        moru Dosai. Hand-made maavu in traditional 
+                        Aatukul. You will be transported to traditional 
+                        south India when you eat this. 
+                        You will get tasty Vengaya Sambhar with Dosai 
+                        and also coconut chutney. Get transported!!
+                        Soodana Dosai for only Rs 2. Very crispy moru 
+                        moru Dosai. Hand-made maavu in traditional 
+                        Aatukul. You will be transported to traditional 
+                        south India when you eat this. 
+                        You will get tasty Vengaya Sambhar with Dosai 
+                        and also coconut chutney. Get transported!!
+                        Soodana Dosai for only Rs 2. Very crispy moru 
+                        moru Dosai. Hand-made maavu in traditional 
+                        Aatukul. You will be transported to traditional 
+                        south India when you eat this. 
+                        You will get tasty Vengaya Sambhar with Dosai 
+                        and also coconut chutney. Get transported!!
+                        Soodana Dosai for only Rs 2. Very crispy moru 
+                        moru Dosai. Hand-made maavu in traditional 
+                        Aatukul. You will be transported to traditional 
+                        south India when you eat this. 
+                        You will get tasty Vengaya Sambhar with Dosai 
+                        and also coconut chutney. Get transported!!
+                        Soodana Dosai for only Rs 2. Very crispy moru 
+                        moru Dosai. Hand-made maavu in traditional 
+                        Aatukul. You will be transported to traditional 
+                        south India when you eat this. 
+                        You will get tasty Vengaya Sambhar with Dosai 
+                        and also coconut chutney. Get transported!!
+                        Soodana Dosai for only Rs 2. Very crispy moru 
+                        moru Dosai. Hand-made maavu in traditional 
+                        Aatukul. You will be transported to traditional 
+                        south India when you eat this. 
+                        You will get tasty Vengaya Sambhar with Dosai 
+                        and also coconut chutney. Get transported!!
+                        Soodana Dosai for only Rs 2. Very crispy moru 
+                        moru Dosai. Hand-made maavu in traditional 
+                        Aatukul. You will be transported to traditional 
+                        south India when you eat this. 
+                        You will get tasty Vengaya Sambhar with Dosai 
+                        and also coconut chutney. Get transported!!
+                        Soodana Dosai for only Rs 2. Very crispy moru 
+                        moru Dosai. Hand-made maavu in traditional 
+                        Aatukul. You will be transported to traditional 
+                        south India when you eat this. 
+                        You will get tasty Vengaya Sambhar with Dosai 
+                        and also coconut chutney. Get transported!!
                       </p>
                     <div class="h4 text-center">Poori</div>
                       <p>
+                        Ubbina Pooris at Rs 5 only. Along with it, your favourite Urulai 
+                        Kizhangu Masala. Pooris made with pure wheat, and not Maida. We care
+                        for your good health. Cooked in Rice bran oil.
+                        You get 2 pooris for Rs 5 only. Indulge in eating our pooris!!
+                        Ubbina Pooris at Rs 5 only. Along with it, your favourite Urulai 
+                        Kizhangu Masala. Pooris made with pure wheat, and not Maida. We care
+                        for your good health. Cooked in Rice bran oil.
+                        You get 2 pooris for Rs 5 only. Indulge in eating our pooris!!
+                        Ubbina Pooris at Rs 5 only. Along with it, your favourite Urulai 
+                        Kizhangu Masala. Pooris made with pure wheat, and not Maida. We care
+                        for your good health. Cooked in Rice bran oil.
+                        You get 2 pooris for Rs 5 only. Indulge in eating our pooris!!
+                        Ubbina Pooris at Rs 5 only. Along with it, your favourite Urulai 
+                        Kizhangu Masala. Pooris made with pure wheat, and not Maida. We care
+                        for your good health. Cooked in Rice bran oil.
+                        You get 2 pooris for Rs 5 only. Indulge in eating our pooris!!
+                        Ubbina Pooris at Rs 5 only. Along with it, your favourite Urulai 
+                        Kizhangu Masala. Pooris made with pure wheat, and not Maida. We care
+                        for your good health. Cooked in Rice bran oil.
+                        You get 2 pooris for Rs 5 only. Indulge in eating our pooris!!
+                        Ubbina Pooris at Rs 5 only. Along with it, your favourite Urulai 
+                        Kizhangu Masala. Pooris made with pure wheat, and not Maida. We care
+                        for your good health. Cooked in Rice bran oil.
+                        You get 2 pooris for Rs 5 only. Indulge in eating our pooris!!
+                        Ubbina Pooris at Rs 5 only. Along with it, your favourite Urulai 
+                        Kizhangu Masala. Pooris made with pure wheat, and not Maida. We care
+                        for your good health. Cooked in Rice bran oil.
+                        You get 2 pooris for Rs 5 only. Indulge in eating our pooris!!
+                        Ubbina Pooris at Rs 5 only. Along with it, your favourite Urulai 
+                        Kizhangu Masala. Pooris made with pure wheat, and not Maida. We care
+                        for your good health. Cooked in Rice bran oil.
+                        You get 2 pooris for Rs 5 only. Indulge in eating our pooris!!
+                        Ubbina Pooris at Rs 5 only. Along with it, your favourite Urulai 
+                        Kizhangu Masala. Pooris made with pure wheat, and not Maida. We care
+                        for your good health. Cooked in Rice bran oil.
+                        You get 2 pooris for Rs 5 only. Indulge in eating our pooris!!
+                        Ubbina Pooris at Rs 5 only. Along with it, your favourite Urulai 
+                        Kizhangu Masala. Pooris made with pure wheat, and not Maida. We care
+                        for your good health. Cooked in Rice bran oil.
+                        You get 2 pooris for Rs 5 only. Indulge in eating our pooris!!
                         Ubbina Pooris at Rs 5 only. Along with it, your favourite Urulai 
                         Kizhangu Masala. Pooris made with pure wheat, and not Maida. We care
                         for your good health. Cooked in Rice bran oil.
